--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -35,7 +35,7 @@
 
     <ImageView
         android:id="@+id/ivPostImage"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
