--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -26,4 +26,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         tools:text="hipster attempt" />
+
+    <ImageView
+        android:id="@+id/ivLike"
+        android:layout_width="27dp"
+        android:layout_height="24dp"
+        app:srcCompat="@drawable/ufi_heart" />
+
 </LinearLayout>
