--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -5,16 +5,16 @@
     <item
         android:id="@+id/action_home"
         android:icon="@drawable/instagram_home_filled_24"
-        android:title="Home"
+        android:title="home"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_compose"
         android:icon="@drawable/instagram_new_post_filled_24"
-        android:title="Compose"
+        android:title="compose"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_profile"
         android:icon="@drawable/instagram_user_outline_24"
-        android:title="Profile"
+        android:title="profile"
         app:showAsAction="always" />
 </menu>
